# Tencent-Advertising-Algorithm-Competition

./: .gitignore  README.md
.github/: pull_request_template.md
pcvr/: ARCHITECTURE.md  Makefile  README.md  build_step1_submission.py  build_step1_submission.sh  build_step3_submission.py  build_submission.sh  infer.py  pyproject.toml  run.sh  train.py
pcvr/configs/: baseline.py  c3_continuous_time.py  first_submission.py
pcvr/data_sample_1000/: schema.json
pcvr/src/: audit.py  checkpoint.py  data.py  model.py  optimizers.py  trainer.py  utils.py
pcvr/tests/: conftest.py  test_c3_continuous_time.py  test_checkpoint.py  test_config.py  test_data_validators.py  test_model_import.py  test_smoke.py  test_utils.py
v1/: dataset.py  run.sh
v10/: dataset.py  infer.py  model.py  run.sh  run_sample.sh  train.py  trainer.py
v11/: run.sh
v12/: infer.py  run.sh
v13/: dataset.py  infer.py  model.py  run.sh  train.py  trainer.py
v14/: infer.py  run.sh
v15/: run.sh
v2/: dataset.py  run.sh  trainer.py
v3/: build_step1_submission.py  dataset.py  infer.py  run.sh  train.py  trainer.py
v3/configs/: baseline.py  v3_xfmr_rope_focal.py
v3/tests/: test_optimizers.py
v4/: build_step1_submission.py  run.sh  train.py
v4/configs/: baseline.py  v4_continuous_time.py
v4/src/: data.py  (+2 more)
v5/: .gitignore  Makefile  build_step1_submission.py  requirements.txt  run.sh
v6/: build_step1_submission.py  infer.py  prepare.sh  run.sh
v7/: infer.py  model.py  run.sh  train.py
v8/: dataset.py  infer.py  model.py  run.sh  train.py  trainer.py
v9/: run.sh  train.py
(+18 files in other folders)
