[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pcvr"
version = "0.1.0"
description = "TAAC 2026 PCVR submission"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
